refactor: adds server migration to redis stream for message processing
